--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,58 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
+# Dependencies
+node_modules/
 /.pnp
 .pnp.js
 
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
+# Build outputs
 /build
+/.svelte-kit
+/package
+.output
+.vercel
+.netlify
 
-# misc
+# Environment variables
+.env
+.env.*
+!.env.example
+
+# OS
 .DS_Store
-*.pem
+Thumbs.db
 
-# debug
+# IDE
+.vscode/*
+!.vscode/extensions.json
+!.vscode/settings.json
+.idea
+*.swp
+*.swo
+*~
+
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# local env files
-.env*.local
-.env
+# Testing
+/coverage
+.nyc_output
 
-# vercel
-.vercel
-
-# typescript
+# TypeScript
 *.tsbuildinfo
-next-env.d.ts
+
+# Temporary files
+*.tmp
+*.temp
+.cache
+
+# Local development
+.env.local
+.env.*.local
+
+# Mastra
+.mastra/
